style.css
* {
    box-sizing: border-box;
}



body {
    margin: 0;
    font-family: 'Source Sans Pro', sans-serif;
    font-size: 1rem;
    color: #282529;
    text-align: center;
}

/* =================
   Typography 
   ================= */

h1 {
    font-size: 2.25rem;
    font-weight: 300;
    color: #fff;
    margin: 0;
}

/* only the p after the h1 in case there is no control on markup*/
h1+p {
    color: #199bf1;
    font-weight: 900;
    font-size: 1.31rem;
    margin: 0;

}

h2 {
    font-size: 1.31rem;
    margin: 0;

}

h2+p {
    color: #199bf1;
    font-weight: 900;
    font-size: 1rem;
    margin-top: 0;
    text-transform: uppercase;
}

.top-text {
    font-size: 0.62rem;
    font-weight: 900;
    color: #199bf1;
    text-transform: uppercase;
    order: -1;
}

.fine-print {
    font-size: 0.6rem;
    letter-spacing: 1px;

}

strong {
    font-weight: 900;
}

/* =================
   Intro section 
   ================= */

.intro {
    background-color: #4f6273;
    background-image: url(https://images.unsplash.com/photo-1511690656952-34342bb7c2f2?crop=entropy&cs=tinysrgb&fm=jpg&ixlib=rb-1.2.1&q=60&raw_url=true&ixid=MnwxMjA3fDB8MHxzZWFyY2h8MXx8dmVnYW58ZW58MHx8MHx8&auto=format&fit=crop&w=500);
    background-blend-mode:multiply;
    background-size: cover;
    background-position: center;    
    padding: 0 .5em 2em;
    display: flex;
    flex-direction: column;
    justify-content: space-between;
    min-height: 50vh;
}


/* =================
   main-content section 
   ================= */
   
.main-content {
    padding: 2em 1em;
}

/* =================
   media queries 
   ================= */
   
   @media (min-width: 500px) {
    body {
        font-size: 1.12rem;
        display: flex;
    }
    
    h1 {
        font-size: 3.5rem;
    }
    
    h2,
    h1 + p {
        font-size: 1.75rem;
    }

    .intro,
    .main-content {
        width: 50%;
        min-height: 100vh;
    }

    .main-content {
        display: flex;
        flex-direction: column;
        justify-content: center;
}
   

